src/objects/Customer_Dashboard_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Account_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Dashboard_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WS_Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WS Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WS_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WS Success</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Dashboard Audit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Dashboard Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Dashboard Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>